# synapsis-test

./: .dockerignore  .gitignore  Cargo.toml  Challenge Test - Sr. Full Stack Software Engineer (1).md  README.md  TASKS.md  TODO.md  docker-compose.yml
crates/fleet-backend/: Cargo.toml
crates/fleet-backend/src/: app.rs  dto.rs  error.rs  health.rs  lib.rs  main.rs  state.rs
crates/fleet-backend/src/handlers/: history.rs  ingest.rs  mod.rs  snapshot.rs  stream.rs
crates/fleet-backend/tests/: concurrency.rs  ingest_http.rs
crates/fleet-proto/: Cargo.toml  build.rs
crates/fleet-proto/src/: lib.rs
crates/fleet-sim/: Cargo.toml
crates/fleet-sim/src/: main.rs  route.rs  state.rs  truck.rs
docker/: rust.Dockerfile  test.Dockerfile
proto/: fleet.proto
scripts/: check.sh
web/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  reducer.test.ts  reducer.ts  store.ts  types.ts  useStream.ts
web/src/components/: FleetMap.tsx  FleetSummary.tsx  HistoryView.tsx  TruckDetail.tsx
