[workspace]
resolver = "2"
members = ["crates/fleet-proto", "crates/fleet-sim", "crates/fleet-backend"]

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "MIT"

[workspace.dependencies]
# async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# protobuf
prost = "0.13"
prost-build = "0.13"
bytes = "1.9"

# web / http
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# data structures
dashmap = "6.1"

# error / util
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# internal
fleet-proto = { path = "crates/fleet-proto" }

[profile.release]
lto = "thin"
codegen-units = 1
