[package]
name = "fleet-backend"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fleet-proto.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
prost.workspace = true
bytes.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
